# raclette

./: Cargo.toml  build.rs  flake.nix  thing.rcl
.github/workflows/: build.yml
benches/: list_sum.rs  perf.rs  range_sum.rs  serdes.rs  sums.rs
benches/cmp_python/: .gitignore  cmp.sh  json.bench  list_sum.bench  range_sum.bench  render_md.sh  toml.bench  yaml.bench
benches/data/: canada.yaml  citm_catalog.yaml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_expr.rs
src/: ast.rs  builtins.rs  calc.lalrpop  interpeter.rs  interpreter.rs  lib.rs  main.rs  raclette.lalrpop  runner.rs  span.rs  stdlib.rcl
src/interpreter/: builtins.rs  mod.rs
src/interpreter/value/: mod.rs
src/interpreter/value/func/: folder.rs  mod.rs
src/runner/: commands.rs  functions.rs  mod.rs
src/runner/value/: magnitude.rs  mod.rs  numeric.rs  unit.rs
tests/: expr.rs  serdes.rs
tests/expr/: multi_div  prio_mult_add
xtask/: Cargo.toml
xtask/src/: main.rs
