[package]
name = "raclette"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
derivative = "2.2.0"
derive_more = "0.99.17"
dirs-next = "2.0.0"
either = "1.10.0"
enum-map = "2.7.3"
itertools = "0.12.1"
lalrpop-util = "0.20.2"
logos = "0.14.0"
miette = { version = "7.2.0", features = ["fancy"] }
once_cell = "1.19.0"
rustyline = "14.0.0"
thiserror = "1.0.57"

[build-dependencies]
lalrpop = { version = "0.20.2", default-features = false }

[profile.release]
debug = true

[dev-dependencies]
#criterion = "0.3.6"
#pprof = { version = "0.10.0", features = ["flamegraph"] }
