[package]
name = "raclette"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
derivative = "2.2.0"
derive_more = { version = "2.0.1", features = ["full"] }
dirs-next = "2.0.0"
either = "1.15.0"
enum-map = "2.7.3"
itertools = "0.14.0"
lalrpop-util = "0.22.2"
logos = "0.15.1"
miette = { version = "7.6.0", features = ["fancy"] }
once_cell = "1.21.3"
rustyline = "17.0.1"
thiserror = "2.0.16"

[build-dependencies]
lalrpop = { version = "0.22.2", default-features = false }

[profile.release]
debug = true

[dev-dependencies]
#criterion = "0.3.6"
#pprof = { version = "0.10.0", features = ["flamegraph"] }
